Change documentation for track handler
