# docs/swagger.json
@@ -398,14 +398,14 @@
                     {
                         "type": "string",
                         "description": "Album Id",
-                        "name": "albumId",
+                        "name": "album",
                         "in": "formData",
                         "required": true
                     },
                     {
                         "type": "string",
                         "description": "Artist Id",
-                        "name": "artistId",
+                        "name": "artist",
                         "in": "formData",
                         "required": true
                     },
